Prevent aside stretching

--- a/src/stylesheets/layout/article/article.styl
+++ b/src/stylesheets/layout/article/article.styl
@@ -24,6 +24,8 @@ article {
   }
 
   .asides {
+    align-self: flex-start;
+
     aside {
       > section {
         @extends $live-area;
